// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`log functions stepBanner should output the correct string for all 5 steps 1`] = `
Array [
  "[2J",
]
`;

exports[`log functions stepBanner should output the correct string for all 5 steps 2`] = `
Array [
  "
 _   _     _               _____                    _       _       
| | | |___(_)_ __   __ _  |_   _|__ _ __ ___  _ __ | | __ _| |_ ___ 
| | | / __| | '_ \\\\ / _\` |   | |/ _ \\\\ '_ \` _ \\\\| '_ \\\\| |/ _\` | __/ _ \\\\
| |_| \\\\__ \\\\ | | | | (_| |   | |  __/ | | | | | |_) | | (_| | ||  __/
 \\\\___/|___/_|_| |_|\\\\__, |   |_|\\\\___|_| |_| |_| .__/|_|\\\\__,_|\\\\__\\\\___|
                   |___/                     |_|                    
",
]
`;

exports[`log functions stepBanner should output the correct string for all 5 steps 3`] = `
Array [
  "Step 1 -> Step 2 -> Step 3 -> Step 4 -> Step 5",
]
`;

exports[`log functions stepBanner should output the correct string for all 5 steps 4`] = `
Array [
  "Load the template",
]
`;

exports[`log functions stepBanner should output the correct string for all 5 steps 5`] = `
Array [
  "________________________________________________________________________________",
]
`;

exports[`log functions stepBanner should output the correct string for all 5 steps 6`] = `
Array [
  "[2J",
]
`;

exports[`log functions stepBanner should output the correct string for all 5 steps 7`] = `
Array [
  "
 _   _     _               _____                    _       _       
| | | |___(_)_ __   __ _  |_   _|__ _ __ ___  _ __ | | __ _| |_ ___ 
| | | / __| | '_ \\\\ / _\` |   | |/ _ \\\\ '_ \` _ \\\\| '_ \\\\| |/ _\` | __/ _ \\\\
| |_| \\\\__ \\\\ | | | | (_| |   | |  __/ | | | | | |_) | | (_| | ||  __/
 \\\\___/|___/_|_| |_|\\\\__, |   |_|\\\\___|_| |_| |_| .__/|_|\\\\__,_|\\\\__\\\\___|
                   |___/                     |_|                    
",
]
`;

exports[`log functions stepBanner should output the correct string for all 5 steps 8`] = `
Array [
  "Step 1 -> Step 2 -> Step 3 -> Step 4 -> Step 5",
]
`;

exports[`log functions stepBanner should output the correct string for all 5 steps 9`] = `
Array [
  "Gather parameters",
]
`;

exports[`log functions stepBanner should output the correct string for all 5 steps 10`] = `
Array [
  "________________________________________________________________________________",
]
`;

exports[`log functions stepBanner should output the correct string for all 5 steps 11`] = `
Array [
  "[2J",
]
`;

exports[`log functions stepBanner should output the correct string for all 5 steps 12`] = `
Array [
  "
 _   _     _               _____                    _       _       
| | | |___(_)_ __   __ _  |_   _|__ _ __ ___  _ __ | | __ _| |_ ___ 
| | | / __| | '_ \\\\ / _\` |   | |/ _ \\\\ '_ \` _ \\\\| '_ \\\\| |/ _\` | __/ _ \\\\
| |_| \\\\__ \\\\ | | | | (_| |   | |  __/ | | | | | |_) | | (_| | ||  __/
 \\\\___/|___/_|_| |_|\\\\__, |   |_|\\\\___|_| |_| |_| .__/|_|\\\\__,_|\\\\__\\\\___|
                   |___/                     |_|                    
",
]
`;

exports[`log functions stepBanner should output the correct string for all 5 steps 13`] = `
Array [
  "Step 1 -> Step 2 -> Step 3 -> Step 4 -> Step 5",
]
`;

exports[`log functions stepBanner should output the correct string for all 5 steps 14`] = `
Array [
  "Generate Module",
]
`;

exports[`log functions stepBanner should output the correct string for all 5 steps 15`] = `
Array [
  "________________________________________________________________________________",
]
`;

exports[`log functions stepBanner should output the correct string for all 5 steps 16`] = `
Array [
  "[2J",
]
`;

exports[`log functions stepBanner should output the correct string for all 5 steps 17`] = `
Array [
  "
 _   _     _               _____                    _       _       
| | | |___(_)_ __   __ _  |_   _|__ _ __ ___  _ __ | | __ _| |_ ___ 
| | | / __| | '_ \\\\ / _\` |   | |/ _ \\\\ '_ \` _ \\\\| '_ \\\\| |/ _\` | __/ _ \\\\
| |_| \\\\__ \\\\ | | | | (_| |   | |  __/ | | | | | |_) | | (_| | ||  __/
 \\\\___/|___/_|_| |_|\\\\__, |   |_|\\\\___|_| |_| |_| .__/|_|\\\\__,_|\\\\__\\\\___|
                   |___/                     |_|                    
",
]
`;

exports[`log functions stepBanner should output the correct string for all 5 steps 18`] = `
Array [
  "Step 1 -> Step 2 -> Step 3 -> Step 4 -> Step 5",
]
`;

exports[`log functions stepBanner should output the correct string for all 5 steps 19`] = `
Array [
  "Install, build and test the module, this may take a minute",
]
`;

exports[`log functions stepBanner should output the correct string for all 5 steps 20`] = `
Array [
  "________________________________________________________________________________",
]
`;

exports[`log functions stepBanner should output the correct string for all 5 steps 21`] = `
Array [
  "[2J",
]
`;

exports[`log functions stepBanner should output the correct string for all 5 steps 22`] = `
Array [
  "
 _   _     _               _____                    _       _       
| | | |___(_)_ __   __ _  |_   _|__ _ __ ___  _ __ | | __ _| |_ ___ 
| | | / __| | '_ \\\\ / _\` |   | |/ _ \\\\ '_ \` _ \\\\| '_ \\\\| |/ _\` | __/ _ \\\\
| |_| \\\\__ \\\\ | | | | (_| |   | |  __/ | | | | | |_) | | (_| | ||  __/
 \\\\___/|___/_|_| |_|\\\\__, |   |_|\\\\___|_| |_| |_| .__/|_|\\\\__,_|\\\\__\\\\___|
                   |___/                     |_|                    
",
]
`;

exports[`log functions stepBanner should output the correct string for all 5 steps 23`] = `
Array [
  "Step 1 -> Step 2 -> Step 3 -> Step 4 -> Step 5",
]
`;

exports[`log functions stepBanner should output the correct string for all 5 steps 24`] = `
Array [
  "Initialize git",
]
`;

exports[`log functions stepBanner should output the correct string for all 5 steps 25`] = `
Array [
  "________________________________________________________________________________",
]
`;
